--- a/src/assets/style/blocks/_header.scss
+++ b/src/assets/style/blocks/_header.scss
@@ -4,17 +4,17 @@ header {
   padding: 0;
   transition: background-color $transition1;
 
-  @media screen and (max-width: $mobile) {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9;
-    box-shadow: $shadowBottom;
+  &.layout-header {
+    @media screen and (max-width: $mobile) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 9;
+      box-shadow: $shadowBottom;
+    }
   }
 
   &.loggedInHeader {
-
-
     @media screen and (min-width: 992px) and (max-width: 1200px) {
       .pagesContainer.linksContainer {
         grid-gap: 3px;
