--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -6,6 +6,10 @@
   min-height: 100vh;
 }
 
+#__layout {
+  display: flex;
+}
+
 #nuxt-loading {
   background-color: $darkViolet !important;
 }
@@ -30,12 +34,14 @@ input[type="number"] {
 }
 
 .mobileOnly {
+
   @media screen and (min-width: $mobile) {
     display: none !important;
   }
 }
 
 .desktopOnly {
+
   @media screen and (max-width: $mobile+1) {
     display: none !important;
   }
@@ -60,6 +66,7 @@ input[type="number"] {
 }
 
 .desktopOnly {
+
   @media screen and (max-width: $mobile) {
     display: none;
   }
@@ -227,6 +234,7 @@ button.-lg.-circle {
       font-size: 1.5rem;
       font-family: $firaSans;
 
+
       & > .close {
         width: 2.2rem !important;
         height: 2.2rem !important;
@@ -274,7 +282,11 @@ button.-lg.-circle {
       color: $gray !important;
     }
 
-    .header,
+    .header
+    .footer,
+    .body {
+      border-color: $light !important;
+    }
     .footer,
     .body {
       background: $modal-background-light !important;
@@ -290,8 +302,18 @@ button.-lg.-circle {
     .header,
     .footer,
     .body {
+      border-color: $modal-border-color-dark !important;
+    }
+
+    .footer,
+    .body {
       background: $modal-background-dark !important;
       border-color: $modal-border-color-dark !important;
+    }
+
+    .header
+    {
+      background: $mediumViolet !important;
     }
 
     .close .icon {
@@ -345,7 +367,7 @@ button.-lg.-circle {
     border-top: none !important;
 
     p {
-      margin: 15px 0;
+      margin: 0 0 15px;
       line-height: 1.4;
     }
   }
@@ -510,5 +532,114 @@ button.-lg.-circle {
     grid-gap: 10px;
     grid-template-columns: 100%;
     grid-template-rows: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: $mobile) {
+  .dappPageWrapper {
+    min-width: 505px;
+
+    .tileBlock {
+      width: 90%;
+      max-width: 505px;
+      height: auto;
+      min-height: 500px;
+      //margin-top: 15px;
+      //margin-top: 35px;
+      margin-right: auto;
+      margin-left: auto;
+      padding: 20px;
+      border-radius: $borderRadius;
+      box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, 0.02);
+      transition: background-color $transition1;
+
+      &.accountBlock {
+        min-height: 0;
+      }
+
+      .tileHeadline {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        margin: 0;
+        padding-bottom: 20px;
+        font-weight: 400;
+        font-family: $firaSans;
+        text-align: center;
+
+        &.withBtn {
+          display: grid;
+          grid-template-rows: 100%;
+          grid-template-columns: 40px 1fr;
+          align-items: center;
+          padding-right: 40px;
+        }
+
+        @media (max-width: $mobile) {
+          font-size: 22px;
+
+          &.withBtn {
+            grid-template-columns: 30px 1fr;
+            padding-right: 30px;
+
+            .returnBtn i {
+              width: 30px;
+              height: 30px;
+              font-size: 16px;
+              line-height: 30px;
+            }
+          }
+        }
+
+        i {
+          display: block;
+          width: 25px;
+          height: 25px;
+          margin-left: 10px;
+          font-size: 11px;
+          line-height: 26px;
+          background: transparentize($color: $gray, $amount: 0.7);
+          border-radius: 50%;
+          transform: translateY(1px);
+          cursor: pointer;
+          opacity: 0.9;
+          transition: background-color $transition1;
+
+          &:hover {
+            background: transparentize($color: $gray, $amount: 0.5);
+          }
+        }
+
+        .returnBtn {
+          display: block;
+          text-decoration: none;
+
+          i {
+            width: 40px;
+            height: 40px;
+            margin-left: 0;
+            font-size: 20px;
+            line-height: 40px;
+            transition: color $transition1;
+          }
+        }
+      }
+
+      .tileText {
+        margin: 5px 0;
+        font-size: 16px;
+        text-align: center;
+      }
+    }
+
+    .tileTextBg {
+      margin: 5px 0;
+      padding: 12px 15px;
+      font-size: 15px;
+      text-align: center;
+      border: 1px solid;
+      border-radius: $borderRadiusMd;
+    }
   }
 }
