fix(css): couple more mobile fixes

--- a/src/assets/style/blocks/_indexHeader.scss
+++ b/src/assets/style/blocks/_indexHeader.scss
@@ -206,7 +206,7 @@ body {
         .mainIndexHeader {
           height: auto;
           min-height: 220px;
-          transform: translateY($headerHeight);
+          transform: translateY(60px);
         }
       }
 
