--- a/src/assets/style/_mobile-layout.scss
+++ b/src/assets/style/_mobile-layout.scss
@@ -4,23 +4,27 @@
   }
   body.inkline.-light {
     min-height: 100vh;
+    //noinspection CssOverwrittenProperties
     min-height: calc(var(--vh, 1vh) * 100);
     height: 100vh;
+    //noinspection CssOverwrittenProperties
     height: calc(var(--vh, 1vh) * 100);
     //noinspection CssInvalidPropertyValue
-    min-height: -webkit-fill-available;
+    min-height: -webkit-fill-available !important;
     //noinspection CssInvalidPropertyValue
-    height: -webkit-fill-available;
+    height: -webkit-fill-available !important;
 
     #__layout {
       max-height: 100vh; /* Use vh as a fallback for browsers that do not support Custom Properties */
+      //noinspection CssOverwrittenProperties
       max-height: calc(var(--vh, 1vh) * 100);
       //noinspection CssInvalidPropertyValue
-      max-height: -webkit-fill-available;
+      max-height: -webkit-fill-available!important;
 
       main
       {
         height: 95vh;
+        //noinspection CssOverwrittenProperties
         height: calc(var(--vh, 1 vh) * 95);
         //noinspection CssInvalidPropertyValue
         height: -webkit-fill-available;
@@ -30,6 +34,7 @@
 
   aside.bn-onboard-custom.bn-onboard-modal {
     max-height: 100vh;
+    //noinspection CssOverwrittenProperties
     max-height: calc(var(--vh, 1vh) * 100);
     padding-bottom: 5rem;
     //noinspection CssInvalidPropertyValue
@@ -207,10 +212,14 @@
 
 
   aside.bn-onboard-custom.bn-onboard-modal {
-    max-height: 100vh;
+    max-height: 95vh;
+    //noinspection CssInvalidPropertyValue
+    max-height: -webkit-fill-available !important;
 
     .bn-onboard-custom.bn-onboard-modal-content {
       max-height: 90vh !important;
+      //noinspection CssInvalidPropertyValue
+      max-height: -webkit-fill-available !important;
     }
 
     section.bn-onboard-custom.bn-onboard-modal-content {
