--- a/src/assets/style/layouts/_index.scss
+++ b/src/assets/style/layouts/_index.scss
@@ -1,6 +1,6 @@
 .indexLayout {
   .routerContainer {
-    min-height: $minRouteHeight;
+    //min-height: $minRouteHeight;
     //min-height: calc(100vh - 70px - 105px);
 
     .dappPageWrapper
@@ -12,7 +12,7 @@
   }
 
   @media (max-width: $mobile) {
-    min-height: $minRouteHeightWithExtra;
+    //min-height: $minRouteHeightWithExtra;
 
     .routerContainer {
       min-height: auto;
