--- a/src/assets/style/pages/_index.scss
+++ b/src/assets/style/pages/_index.scss
@@ -9,7 +9,7 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    min-height: $minRouteHeightWithExtra;
+    //min-height: $minRouteHeightWithExtra;
 
     h1 {
       font-weight: 800;
